# project-2_Krylasov_Leonid_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
