[tool.poetry]
name = "project-2-krylasov-leonid-m25-555"
version = "0.1.0"
description = "Простая реализация базы данных на Python"
authors = ["Leonid <leonid6011@gmail.com>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" },
]
 
[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []